; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_modctl_lookup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_modctl_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.modctl = type { i64, %struct.modctl* }
%struct.kmod_info = type { i64 }

@mod_lock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@dtrace_modctl_list = common dso_local global %struct.modctl* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.modctl* (%struct.kmod_info*)* @dtrace_modctl_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.modctl* @dtrace_modctl_lookup(%struct.kmod_info* %0) #0 {
  %2 = alloca %struct.modctl*, align 8
  %3 = alloca %struct.kmod_info*, align 8
  %4 = alloca %struct.modctl*, align 8
  store %struct.kmod_info* %0, %struct.kmod_info** %3, align 8
  %5 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %6 = call i32 @LCK_MTX_ASSERT(i32* @mod_lock, i32 %5)
  %7 = load %struct.modctl*, %struct.modctl** @dtrace_modctl_list, align 8
  store %struct.modctl* %7, %struct.modctl** %4, align 8
  br label %8

8:                                                ; preds = %22, %1
  %9 = load %struct.modctl*, %struct.modctl** %4, align 8
  %10 = icmp ne %struct.modctl* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %8
  %12 = load %struct.modctl*, %struct.modctl** %4, align 8
  %13 = getelementptr inbounds %struct.modctl, %struct.modctl* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.kmod_info*, %struct.kmod_info** %3, align 8
  %16 = getelementptr inbounds %struct.kmod_info, %struct.kmod_info* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp eq i64 %14, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = load %struct.modctl*, %struct.modctl** %4, align 8
  store %struct.modctl* %20, %struct.modctl** %2, align 8
  br label %27

21:                                               ; preds = %11
  br label %22

22:                                               ; preds = %21
  %23 = load %struct.modctl*, %struct.modctl** %4, align 8
  %24 = getelementptr inbounds %struct.modctl, %struct.modctl* %23, i32 0, i32 1
  %25 = load %struct.modctl*, %struct.modctl** %24, align 8
  store %struct.modctl* %25, %struct.modctl** %4, align 8
  br label %8

26:                                               ; preds = %8
  store %struct.modctl* null, %struct.modctl** %2, align 8
  br label %27

27:                                               ; preds = %26, %19
  %28 = load %struct.modctl*, %struct.modctl** %2, align 8
  ret %struct.modctl* %28
}

declare dso_local i32 @LCK_MTX_ASSERT(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
